# adv_sci_comp_spring2017

./: .gitignore  README.md
build_systems/autotools/: .gitignore  AUTHORS  Makefile.am  README  aclocal.m4  configure.ac
build_systems/autotools/include/my_cool_library/: other1.hpp
build_systems/autotools/src/my_cool_library/: Makemodule.am  other1.cpp
build_systems/autotools/src/my_cool_program/: Makemodule.am  main.cpp
build_systems/autotools/test/: Makemodule.am
build_systems/cmake/: CMakeLists.txt
build_systems/cmake/include/my_cool_program/: header.hpp
build_systems/cmake/src/my_cool_library/: other2.cpp
build_systems/cmake/test/: my_cool_test.cpp
build_systems/make/: .gitignore  Makefile
build_systems/make/include/: header.hpp
build_systems/make/src/: main.cpp  other2.cpp
build_systems/scons/: .gitignore  SConstruct
build_systems/scons/include/: other2.hpp
build_systems/scons/src/: other1.cpp
functors/: fd.cpp  finite_differences.hpp
gdb/: factorial.cpp  seg.cpp
hw_solns/1/: 1.10.2.2.cpp
hw_solns/2/: 1.10.2.1.cpp  find_the_leak1.hpp  find_the_leak2.cpp
hw_solns/3/3.11.1/: to_string.cpp
hw_solns/3/3.11.8/: stack.hpp  teststack.cpp
hw_solns/5/: fft.cpp
mpi/a_little_deeper/: non_blocking_sendrecv.cpp
mpi/basics/: basic_mpi.cpp  buffering_dependent.cpp  deadlocks.cpp  parallel_sum.cpp  pingpong.cpp  send_recv.cpp  send_recv_wildcards.cpp  trivial_matrix.cpp
mpi/hw/: lu.cpp
mpi/hw/parallel/: lu_parallel.hpp  lu_parallel_test.cpp  lu_performance.cpp  parallelism.hpp
mpi/hw/serial/: lu.hpp  lu_serial_test.cpp  matrix.hpp  random.hpp
openacc/basics/: hello.cpp  matrix.hpp  mul1.cpp  mul2.cpp  mul3.cpp  random.hpp  timer.hpp
openacc/c_style/: matrix.hpp  mul1.cpp
openacc/laplace/: parallel.c  serial.c
openacc/linear/: matrix.hpp  mul1.cpp
openmp/basics/: can_include_openmp.cpp  dot_product.cpp  dot_product_version2.cpp
openmp/false_sharing/: false_sharing1.cpp  false_sharing2.cpp  false_sharing3.cpp  run.sh
openmp/problems/: data_race.cpp  deadlock.cpp
openmp/sections/: nesting.cpp  recursive_nesting.cpp  sections.cpp
openmp/tasks/: sum_parallel.cpp  sum_serial.cpp  tasks.cpp
pointers/dumb/: find_the_leak1.cpp  find_the_leak1.hpp  find_the_leak2.cpp  find_the_leak2.hpp  raw_pointer_demo.cpp
pointers/smart/: shared_ptr_demo.cpp  unique_ptr_demo.cpp
templates/: basic_function_template.cpp  basic_function_template.hpp  class_template_vector.cpp  class_template_vector.hpp  class_template_vector_2.cpp  class_template_vector_2.hpp
templates/newtons_method/: newton.hpp  newton_rational.cpp  rational.hpp
tuple/: tuple_demo.cpp
